--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@caucolum/tsup": "^1.0.5",
+    "@caucolum/api-query-object": "^1.0.7",
+    "@caucolum/tsup": "^1.0.6",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
